Better long titles

--- a/app/views/blazer/dashboards/show.html.erb
+++ b/app/views/blazer/dashboards/show.html.erb
@@ -19,7 +19,7 @@
     <div class="row" style="padding-top: 13px;">
       <div class="col-sm-9">
         <%= render partial: "blazer/nav" %>
-        <h3 style="margin: 0; line-height: 34px; display: inline-block;">
+        <h3 style="margin: 0; line-height: 34px; display: inline;">
           <%= @dashboard.name %>
         </h3>
       </div>
