--- a/app/views/layouts/blazer/application.html.erb
+++ b/app/views/layouts/blazer/application.html.erb
@@ -9,7 +9,14 @@
     <script>
       var Chartkick = {smarterDates: true, smarterDiscrete: true};
     </script>
-    <%= javascript_include_tag "blazer/application" %>
+
+    <% if Blazer.async %>
+      <%= action_cable_meta_tag %>
+      <%= javascript_include_tag "blazer/async" %>
+    <% else %>
+      <%= javascript_include_tag "blazer/application" %>
+    <% end %>
+
     <% if blazer_maps? %>
       <%= stylesheet_link_tag "https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css" %>
       <%= javascript_include_tag "https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.js" %>
