--- a/app/views/layouts/blazer/application.html.erb
+++ b/app/views/layouts/blazer/application.html.erb
@@ -6,10 +6,10 @@
     <meta charset="utf-8" />
 
     <%= stylesheet_link_tag "blazer/application" %>
-    <script>
-      var Chartkick = {smarterDates: true, smarterDiscrete: true};
-    </script>
     <%= javascript_include_tag "blazer/application" %>
+    <script>
+      var runQueriesPath = <%= run_queries_path.to_json.html_safe %>;
+    </script>
     <% if blazer_maps? %>
       <%= stylesheet_link_tag "https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css" %>
       <%= javascript_include_tag "https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.js" %>
