Fixed error display

--- a/app/views/blazer/queries/show.html.erb
+++ b/app/views/blazer/queries/show.html.erb
@@ -162,7 +162,7 @@
       $("#results table").stupidtable().stickyTableHeaders({fixedOffset: 60});
     }
 
-    function showError(data) {
+    function showError(message) {
       $("#results").css("color", "red").html(message);
     }
 
