--- a/app/views/blazer/queries/run.html.erb
+++ b/app/views/blazer/queries/run.html.erb
@@ -73,7 +73,12 @@
       <%= column_chart (values.size - 1).times.map { |i| name = @columns[i + 1]; {name: name, data: @rows.first(20).map { |r| [(@boom[@columns[0]] || {})[r[0].to_s] || r[0], r[i + 1]] } } }, id: chart_id %>
     <% elsif @only_chart %>
       <% if @rows.size == 1 && @rows.first.size == 1 %>
-        <p style="font-size: 160px;"><%= blazer_format_value(@columns.first, @rows.first.first) %></p>
+        <% v = @rows.first.first %>
+        <% if v.is_a?(String) && v == "" %>
+          <div class="text-muted">empty string</div>
+        <% else %>
+          <p style="font-size: 160px;"><%= blazer_format_value(@columns.first, v) %></p>
+        <% end %>
       <% else %>
         <% @no_chart = true %>
       <% end %>
