Added error messages

--- a/app/views/blazer/queries/run.html.erb
+++ b/app/views/blazer/queries/run.html.erb
@@ -29,6 +29,9 @@
 
       <% @checks.select(&:state).each do |check| %>
         &middot; <small class="check-state <%= check.state.parameterize("_") %>"><%= link_to check.state.upcase, edit_check_path(check) %></small>
+        <% if check.try(:error) %>
+          &middot; <%= check.error %>
+        <% end %>
       <% end %>
     </p>
   <% end %>
