New check shortcut

--- a/app/views/blazer/_nav.html.erb
+++ b/app/views/blazer/_nav.html.erb
@@ -10,6 +10,7 @@
     <li role="separator" class="divider"></li>
     <li><%= link_to "New Query", new_query_path %></li>
     <li><%= link_to "New Dashboard", new_dashboard_path %></li>
-    <li><%= link_to "New Check", new_check_path %></li>
+    <% check_params = @query ? {query_id: @query.id} : {} %>
+    <li><%= link_to "New Check", new_check_path(check_params) %></li>
   </ul>
 </div>
