Added support for images

--- a/app/assets/stylesheets/blazer/application.css
+++ b/app/assets/stylesheets/blazer/application.css
@@ -24,6 +24,11 @@ body {
   background-color: #fff;
 }
 
+.results-table img {
+  max-width: 200px;
+  max-height: 200px;
+}
+
 input.search {
   border: none;
   box-shadow: none;
